Learn: Python, and Built my on redux store

--- a/redux/intro/index.html
+++ b/redux/intro/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Learn: Redux</h1>
-    <script src="./app.js"></script>
+    <script src="./app.js" type="module"></script>
 </body>
 </html>
